[package]
name = "do_it"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
clap = { version = "4.5", features = ["derive"] }
sled = "0.34.7"
uuid = { version = "1.8", features = ["v4"] }